tests/reject/explicit_nongeneric.ty
fn f() -> int:
    return 1
fn main():
    println(str(f$(int)()))
